updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 22 years of age and i run my own online business which lead me to wanna be a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Brazil and moved to Australia in 2010, i been here ever since.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to play football as in soccer not footy.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to work as a web developer for a company that values my skills and also my ideas, i would like to develope my own company one day.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I am currently living in Adelaide.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>the reason why i want to be a web developer is because these past few years i have been working and building my own online stores and i always had issues with the backend of my websites. So i decided to learn it for myself, i always used to wander how the themes were made in the backend. i started watching some youtube videos about it and i really thought it would be something that i would be interested on doing, now we here. </p>
     </section>
 
     <footer id="footer">
