updating our details

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am 22 years of age and i run my own online business which lead me to wanna be a web developer.</p>
+      <p>I am 22 years of age and i run my own online business which led me to wanna be a web developer.</p>
       <h1>Where I'm From</h1>
       <p>I was born in Brazil and moved to Australia in 2010, i been here ever since.</p>
       <h1>What are your favorite hobbies?</h1>
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>I am currently living in Adelaide.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>the reason why i want to be a web developer is because these past few years i have been working and building my own online stores and i always had issues with the backend of my websites. So i decided to learn it for myself, i always used to wander how the themes were made in the backend. i started watching some youtube videos about it and i really thought it would be something that i would be interested on doing, now we here. </p>
+      <p>the reason why i want to be a web developer is because these past few years i have been working and building my own online stores and i always had issues with the backend of my websites. So i decided to learn it for myself, i always used to wonder how the themes were made in the backend. i started watching some youtube videos about it and i really thought it would be something that i would be interested on doing, now we here. </p>
     </section>
 
     <footer id="footer">
