updating our details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Wilker Lino</h1>
+        <h1 class='masthead-heading'><strong>Wilker Lino</strong></h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I was born in Brazil and moved to Australia in 2010, i been here ever since.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love to play football as in soccer not footy.</p>
+      <p>I love to play football as in <strong>SOOCER</strong> not footy.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job is to work as a web developer for a company that values my skills and also my ideas, i would like to develope my own company one day.</p>
       <h1>Where do you live?</h1>
