updating our details

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am 22 years of age and i run my own online business which led me to wanna be a web developer.</p>
+      <p>I am 22 years old and i graduated high school in 2016. These past few years i have tried many things to see what i am interested.</p>
       <h1>Where I'm From</h1>
-      <p>I was born in Brazil and moved to Australia in 2010, i been here ever since.</p>
+      <p>I was born in Brazil and moved to Australia in 2010 with only my Dad.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love to play football as in <strong>SOOCER</strong> not footy.</p>
+      <p>I love to play football <strong>(soccer)</strong> not footy.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job is to work as a web developer for a company that values my skills and also my ideas, i would like to develope my own company one day.</p>
       <h1>Where do you live?</h1>
