updating our details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>I was born in Brazil and moved to Australia in 2010 with only my Dad.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I love to play football <strong>(soccer)</strong> not footy.</p>
+      <p>I love to play football <strong>(soccer)</strong> not footy. I also like to play tennis and basketball.</p>
       <h1>What's your dream job?</h1>
       <p>My dream job is to work as a web developer for a company that values my skills and also my ideas, i would like to develope my own company one day.</p>
       <h1>Where do you live?</h1>
